fix note x icon on mobile

--- a/src/styles/note-list.scss
+++ b/src/styles/note-list.scss
@@ -187,8 +187,8 @@
     header > span {
         display: none;
     }
-    .note-list {
-        .delete-note {
+    .note-list .notes {
+        .close {
             display: inline-block;
         }
         .note-label {
